--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,15 +6,22 @@
     <link rel="stylesheet" href="popup.css">
 </head>
 <body>
+        <!-- vamos adicionar a logo ao lado do h1 -->
+    <img src="./../icons/icon96.png" alt="icon" width="100" height="100">
     <h1>Detector de Ataques Web</h1>
-    <button id="checkSecurityButton">Verificar Segurança</button>
+    <!-- vamos criar uma div para tornar os botoes na vertical -->
+    <div class="vertical">
     <button id="checkThirdPartyDomainsButton">Detectar Domínios de Terceiros</button>
     <button id="checkCookiesButton">Verificar Cookies Injetados</button>
     <button id="checkStorageButton">Verificar Armazenamento Local</button>
     <button id="checkCookieSyncButton">Detectar Sincronismo de Cookies</button>
     <button id="detectInjectionsButton">Detectar Injeções de Scripts</button>
+    <button id="checkCanvasFingerprintingButton">Detectar Canvas Fingerprinting</button>
+    </div>
     <div id="loading" style="display: none;">Verificando...</div>
     <div id="results" class="results"></div>
+    <button id="privacyScoreButton">Verificar Pontuação de Privacidade</button>
+
     <script src="popup.js"></script>
 </body>
 </html>
